[gd_scene load_steps=8 format=2]

[ext_resource path="res://Components/Elevator/Elevator.gd" type="Script" id=1]
[ext_resource path="res://Assets/font_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/white.png" type="Texture" id=3]
[ext_resource path="res://Components/Elevator/arrow.png" type="Texture" id=4]
[ext_resource path="res://Components/Elevator/ElevatorIndicator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/Elevator/ElevatorTrigger.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 122.042, 429.05 )

[node name="Elevator" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 3469.98
margin_top = 125.527
margin_right = 3635.98
margin_bottom = 234.527
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ELEVATOR
"

[node name="Texture" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.286275 )
margin_left = 3650.05
margin_top = -513.789
margin_right = 3902.05
margin_bottom = 382.211
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="Sprite" type="Sprite" parent="Texture"]
position = Vector2( 123.033, 762.803 )
scale = Vector2( 0.466858, 0.378622 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Texture"]
position = Vector2( 118.932, 412.16 )
scale = Vector2( 0.466858, 0.378622 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Texture"]
position = Vector2( 118.932, 580.305 )
scale = Vector2( 0.466858, 0.378622 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Texture"]
position = Vector2( 114.831, 229.661 )
scale = Vector2( 0.466858, 0.378622 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Texture"]
position = Vector2( 131.26, 440.18 )
collision_layer = 65
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="Texture/Area2D"]
position = Vector2( -6.15137, 12.3033 )
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 3596.18, -488.157 )
points = PoolVector2Array( 0, 0, -200, 0, -200, 280 )
default_color = Color( 0.180392, 0.180392, 0.180392, 1 )
texture_mode = 35

[node name="Indicator" parent="." instance=ExtResource( 5 )]

[node name="Trigger" parent="." instance=ExtResource( 6 )]

[connection signal="body_entered" from="Texture/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Texture/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_exited" from="Trigger" to="." method="_on_Trigger_body_exited"]
